--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Subscriptions</string>
+    <string name="app_name">Recurring Expense Tracker</string>
     <string name="title_activity_main">MainActivity</string>
 </resources>
