--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Recurring Expenses</string>
+
+    <string name="bottom_nav_home">Home</string>
+    <string name="bottom_nav_settings">Settings</string>
 </resources>
