--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="edit_expense_name">Name</string>
     <string name="edit_expense_name_placeholder">e.g. Netflix</string>
     <string name="edit_expense_price">Price</string>
+
+    <string name="settings_title">Settings</string>
+    <string name="settings_licenses">Licenses</string>
+
 </resources>
