--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -21,10 +21,14 @@
     <string name="edit_expense_name_placeholder">z.B. Netflix</string>
     <string name="edit_expense_price">Preis</string>
     <string name="edit_expense_recurrence">Abrechnungszeitraum</string>
-    <string name="edit_expense_recurrence_day">T</string>
-    <string name="edit_expense_recurrence_week">W</string>
-    <string name="edit_expense_recurrence_month">M</string>
-    <string name="edit_expense_recurrence_year">J</string>
+    <string name="edit_expense_recurrence_day">Tag(e)</string>
+    <string name="edit_expense_recurrence_day_short">T</string>
+    <string name="edit_expense_recurrence_week">Woche(n)</string>
+    <string name="edit_expense_recurrence_week_short">W</string>
+    <string name="edit_expense_recurrence_month">Monat(e)</string>
+    <string name="edit_expense_recurrence_month_short">M</string>
+    <string name="edit_expense_recurrence_year">Jahr(e)</string>
+    <string name="edit_expense_recurrence_year_short">J</string>
 
     <string name="settings_title">Einstellungen</string>
 </resources>
