--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- Bottom Navigation -->
     <string name="bottom_nav_home">Home</string>
+    <string name="bottom_nav_upcoming">Upcoming</string>
     <string name="bottom_nav_settings">Settings</string>
 
     <!-- Home Tab -->
@@ -16,7 +17,7 @@
     <string name="edit_expense_button_add">Add Expense</string>
     <string name="edit_expense_button_delete">Delete</string>
     <string name="edit_expense_button_update">Update Expense</string>
-    <string name="edit_expense_description">Description</string>
+    <string name="edit_expense_description">Description (optional)</string>
     <string name="edit_expense_description_placeholder">e.g. special subscription</string>
     <string name="edit_expense_invalid_input">Invalid input</string>
     <string name="edit_expense_name">Name</string>
@@ -31,7 +32,17 @@
     <string name="edit_expense_recurrence_month_short">M</string>
     <string name="edit_expense_recurrence_year">Year(s)</string>
     <string name="edit_expense_recurrence_year_short">Y</string>
+    <string name="edit_expense_first_payment">First Payment (optional)</string>
+    <string name="edit_expense_first_payment_placeholder">e.g. today</string>
 
+    <!-- Upcoming Payments Tab -->
+    <string name="upcoming_title">Upcoming Payments</string>
+    <string name="upcoming_placeholder_title">Define a first payment date for expenses to see an overview of upcoming payments</string>
+    <string name="upcoming_time_remaining_today">today</string>
+    <string name="upcoming_time_remaining_tomorrow">tomorrow</string>
+    <string name="upcoming_time_remaining_days">in %1$d days</string>
+
+    <!-- Settings Tab -->
     <string name="settings_title">Settings</string>
     <string name="settings_backup">Backup</string>
     <string name="settings_backup_create">Create backup</string>
@@ -41,4 +52,6 @@
     <string name="settings_backup_restored_toast">Backup restored</string>
     <string name="settings_backup_not_restored_toast">Backup could not be restored</string>
 
+    <!-- General -->
+    <string name="dialog_ok">OK</string>
 </resources>
