Add option to define a color for an expense
Defining a color for an expense will color the background of the
expense in all lists. This allows a visual grouping of the expenses.

fixes: #85

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="edit_expense_recurrence_year_short">Y</string>
     <string name="edit_expense_first_payment">First Payment (optional)</string>
     <string name="edit_expense_first_payment_placeholder">e.g. today</string>
+    <string name="edit_expense_color">Color</string>
 
     <!-- Upcoming Payments Tab -->
     <string name="upcoming_title">Upcoming Payments</string>
