Shorten text for "Update Expense" button
fixes: #123

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <!-- Edit expense Bottom Sheet -->
     <string name="edit_expense_button_add">Add Expense</string>
     <string name="edit_expense_button_delete">Delete</string>
-    <string name="edit_expense_button_update">Update Expense</string>
+    <string name="edit_expense_button_save">Save</string>
     <string name="edit_expense_description">Description (optional)</string>
     <string name="edit_expense_description_placeholder">e.g. special subscription</string>
     <string name="edit_expense_invalid_input">Invalid input</string>
