--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,7 +14,7 @@
     <!-- Edit expense Bottom Sheet -->
     <string name="edit_expense_button_add">Ausgabe hinzufügen</string>
     <string name="edit_expense_button_delete">Löschen</string>
-    <string name="edit_expense_button_update">Ausgabe aktualisieren</string>
+    <string name="edit_expense_button_save">Speichern</string>
     <string name="edit_expense_description">Beschreibung (optional)</string>
     <string name="edit_expense_description_placeholder">z.B. spezielles Abo</string>
     <string name="edit_expense_invalid_input">Ungültige Eingabe</string>
