--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name" translatable="false">Expenses</string>
 
+    <!-- TopAppBar -->
+    <string name="top_app_bar_icon_button_grid_open_content_desc">Open Grid Mode</string>
+    <string name="top_app_bar_icon_button_grid_close_content_desc">Close Grid Mode</string>
+
     <!-- Bottom Navigation -->
     <string name="bottom_nav_home">Home</string>
     <string name="bottom_nav_upcoming">Upcoming</string>
@@ -55,4 +59,5 @@
 
     <!-- General -->
     <string name="dialog_ok">OK</string>
+    <string name="recurring_expense_overview_toggle_anim_label">Animates between row mode and grid mode</string>
 </resources>
