--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -54,7 +54,14 @@
     <string name="settings_backup_not_created_toast">Backup fehlgeschlagen</string>
     <string name="settings_backup_restored_toast">Backup wiederhergestellt</string>
     <string name="settings_backup_not_restored_toast">Backup konnte nicht wiederhergestellt werden</string>
+    <string name="settings_title_security">Sicherheit</string>
+    <string name="settings_security_biometric_lock">Biometrische Sicherheit</string>
+
+    <!-- BiometricPromptManager -->
+    <string name="biometric_prompt_manager_title">Entsperre Expense Tracker</string>
+    <string name="biometric_prompt_manager_unlock">Entsperren</string>
 
     <!-- General -->
     <string name="dialog_ok">OK</string>
+    <string name="cancel">Abbrechen</string>
 </resources>
