--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="edit_expense_recurrence_year">Year(s)</string>
     <string name="edit_expense_recurrence_year_short">Y</string>
     <string name="edit_expense_first_payment">First Payment (optional)</string>
-    <string name="edit_expense_first_payment_placeholder">e.g. today</string>
+    <string name="edit_expense_first_payment_placeholder">Pick a Date</string>
     <string name="edit_expense_color">Color</string>
 
     <!-- Upcoming Payments Tab -->
