--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -35,6 +35,7 @@
     <string name="edit_expense_recurrence_year">Jahr(e)</string>
     <string name="edit_expense_recurrence_year_short">J</string>
     <string name="edit_expense_first_payment">Erste Zahlung (optional)</string>
+    <string name="edit_expense_first_payment_placeholder">Datum auswählen</string>
     <string name="edit_expense_color">Farbe</string>
 
     <!-- Upcoming Payments Tab -->
